Cambios en las reglas

--- a/elastalert/config.yaml
+++ b/elastalert/config.yaml
@@ -1,18 +1,40 @@
 # config.yaml
+
 rules_folder: rules
+
 run_every:
   minutes: 1
+
 buffer_time:
   minutes: 15
 
-# Conexión a tu Elastic
+# --- CONEXIÓN A ELASTIC ---
 es_host: 192.168.153.3
 es_port: 9200
 es_username: elastic
-es_password: mlJZP3AuDE0pr4q1Rwq8 
+es_password: mlJZP3AuDE0pr4q1Rwq8   # tu contraseña de Elasticsearch
 
 verify_certs: False
 ssl_show_warn: False
 use_ssl: True
 
 writeback_index: elastalert_status
+
+# --- CONFIGURACIÓN PARA ENVÍO DE CORREOS (GMAIL) ---
+
+# Tipo de alerta por defecto (puedes dejarlo así)
+alert:
+  - "email"
+
+# Destinatario por defecto
+email:
+  - "cuentapararedireccionar@gmail.com"
+
+# Parámetros SMTP de Gmail
+smtp_host: "smtp.gmail.com"
+smtp_port: 587
+smtp_ssl: false                # con 587 se usa STARTTLS
+from_addr: "cuentapararedireccionar@gmail.com"
+
+# Fichero con usuario y contraseña SMTP
+smtp_auth_file: "/home/xxx/Desktop/wallapop-fraud-lab/elastalert/smtp_auth.yaml"
