--- a/elastalert/rules/high_risk.yaml
+++ b/elastalert/rules/high_risk.yaml
@@ -3,20 +3,33 @@ name: "ALERTA: Anuncio de Riesgo Extremo (>80)"
 type: any
 index: wallapop-items
 
+# Campo de tiempo
 timestamp_field: "timestamps.created_at"
+
 timeframe:
-  hours: 24
+  hours: 48
 
-# Filtro: Score mayor de 80
+# Filtro: score >= 80
 filter:
-- range:
-    enrichment.risk_score:
-      gte: 80
+  - range:
+      enrichment.risk_score:
+        gte: 80
 
-# Salida limpia por pantalla
+# Alertas que se disparan con la regla
 alert:
-- "debug"
+  - "debug"
+  - "email"
 
+# Destinatarios específicos de esta regla (además de los globales si quieres)
+email:
+  - "cuentapararedireccionar@gmail.com"
+
+# Asunto del correo
+alert_subject: "🚨 ALERTA CRÍTICA: Fraude Detectado en Wallapop ({0})"
+alert_subject_args:
+  - "title"
+
+# Cuerpo del correo
 alert_text: |
   🚨 RIESGO EXTREMO DETECTADO 🚨
   ------------------------------
@@ -24,10 +37,13 @@ alert_text: |
   Riesgo: {1}/100
   Factores: {2}
   Vendedor: {3}
-  ------------------------------
 
 alert_text_args:
-- "title"
-- "enrichment.risk_score"
-- "enrichment.risk_factors"
-- "user_id"
+  - "title"
+  - "enrichment.risk_score"
+  - "enrichment.risk_factors"
+  - "user_id"
+
+# Para que no silencie la regla
+realert:
+  minutes: 0
